# ha-sf-street-cleaning

./: .gitignore  README.md  flake.nix  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml  release.yaml  tests.yml
custom_components/sf_street_cleaning/: __init__.py  config_flow.py  const.py  geometry.py  manifest.json  sensor.py
tests/: mock_homeassistant.py  test_sensor.py
